<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.adminLogIn"
    android:background="@drawable/pn">


    <EditText
        android:id="@+id/IdAdminLogInEmail"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/HintEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/IdAdminPasswordLogIn"
        android:layout_width="335dp"
        android:layout_height="59dp"

        android:layout_marginTop="44dp"
        android:ems="10"

        android:hint="@string/HintPassword"
        android:inputType="numberPassword"
        android:textColorHint="#C88BA0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdAdminLogInEmail" />

    <Button
        android:id="@+id/IdAdminBtnLogIn"
        android:layout_width="335dp"
        android:layout_height="59dp"

        android:layout_marginTop="25dp"
        android:background="#2196F3"
        android:text="@string/TextLogin"
        android:onClick="AdminlogInWork"

        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdAdminPasswordLogIn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/TextEmail"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/IdAdminLogInEmail"
        app:layout_constraintStart_toStartOf="@+id/IdAdminLogInEmail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/TextPassword"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/IdAdminPasswordLogIn"
        app:layout_constraintStart_toStartOf="@+id/IdAdminPasswordLogIn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="158dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <ProgressBar
        android:id="@+id/AdminProgressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="179dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="Admin Panel"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>