<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngkk"
    tools:context=".views.register">


    <EditText
        android:id="@+id/IdEditTextNameRegs"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Hint_full_name"
        android:textColorHint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/IdEditTxtEmailRegs"
        app:layout_constraintStart_toStartOf="@+id/IdEditTxtEmailRegs" />

    <EditText
        android:id="@+id/IdEditTxtEmailRegs"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/HintEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/IdEditTextPasswordRegs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/IdEditTextPasswordRegs"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/HintPassword"
        android:inputType="numberPassword|textPassword"
        android:textColorHint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/IdBtnRegisterUser"
        app:layout_constraintStart_toStartOf="@+id/IdEditTxtEmailRegs" />

    <Button
        android:id="@+id/IdBtnRegisterUser"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginBottom="100dp"
        android:background="#2196F3"
        android:onClick="DoRegisterUser"
        android:text="@string/TextRegister"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/IdEditTextPasswordRegs" />

    <ProgressBar
        android:id="@+id/RegisterProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="142dp"
        android:layout_height="125dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <ImageView
        android:id="@+id/IdRegisterLogo"
        android:layout_width="247dp"
        android:layout_height="156dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />


</androidx.constraintlayout.widget.ConstraintLayout>